fix workshop card on mobile screen

--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -35,6 +35,9 @@
   &--workshop {
     position: relative;
     height: 30rem;
+    @include respond(phone) {
+      height: 50rem;
+    }
   }
   &__data {
     position: absolute;
